test/hotCases/errors/events/k_valueB.js
export const valueB = 1;
---
export const valueB = 2;
